@@ -1,13 +1,11 @@
 package xp.nova.sqldb.graph;
 
 import java.util.Map;
-import java.util.Map.Entry;
-
 import org.nova.sqldb.Row;
 
 public class QueryResult
 {
-    final private Row row;
+    final Row row;
     final Map<String,GraphObjectDescriptor> map;
     
     QueryResult(Row row,Map<String,GraphObjectDescriptor> map) throws Exception
@@ -16,7 +14,7 @@ public class QueryResult
         this.row=row;
     }
     
-    public <OBJECT extends NodeObject> OBJECT get(String namespace,Class<OBJECT> type) throws Throwable
+    public <OBJECT extends NodeObject> OBJECT getNodeObject(String namespace,Class<OBJECT> type) throws Throwable
     {
         String typeName=namespace!=null?namespace+"."+type.getSimpleName():type.getSimpleName();
         GraphObjectDescriptor descriptor=this.map.get(typeName);
@@ -30,32 +28,53 @@ public class QueryResult
         {
             return null;
         }
-        NodeObject nodeObject = (NodeObject) type.newInstance();
+        NodeObject node = (NodeObject) type.getDeclaredConstructor().newInstance();
         for (FieldDescriptor columnAccessor : descriptor.getFieldDescriptors())
         {
-            columnAccessor.set(nodeObject, typeName, row);
+            columnAccessor.set(node, typeName, row);
         }
-        return (OBJECT)nodeObject;
+        return (OBJECT)node;
+    }
+
+    public Long getNodeId(String namespace,Class<? extends NodeObject> type) throws Throwable
+    {
+        String typeName=namespace!=null?namespace+"."+type.getSimpleName():type.getSimpleName();
+        GraphObjectDescriptor descriptor=this.map.get(typeName);
+        if (descriptor==null)
+        {
+            throw new Exception("Type not in query: type="+type.getCanonicalName()+", namespace="+namespace);
+        }
+
+        Long nodeId = row.getNullableBIGINT(typeName + "._nodeId");
+        if (nodeId==null)
+        {
+            return null;
+        }
+        return nodeId;
+    }
+    public Long getNodeId(Class<? extends NodeObject> type) throws Throwable
+    {
+        return getNodeId(null,type);
     }
     
 
-    public <OBJECT extends NodeObject> OBJECT get(Class<OBJECT> type) throws Throwable
+    public <OBJECT extends NodeObject> OBJECT getNodeObject(Class<OBJECT> type) throws Throwable
     {
-        return this.get(null,type);
+        return this.getNodeObject(null,type);
     }
     
-    static public <OBJECT extends NodeObject> OBJECT get(String namespace,Class<OBJECT> type,QueryResult result) throws Throwable
+    static public <OBJECT extends NodeObject> OBJECT getNodeObject(String namespace,Class<OBJECT> type,QueryResult result) throws Throwable
     {
         if (result==null)
         {
             return null;
         }
-        return result.get(namespace,type);
+        return result.getNodeObject(namespace,type);
     }
 
-    static public <OBJECT extends NodeObject> OBJECT get(Class<OBJECT> type,QueryResult result) throws Throwable
+    static public <OBJECT extends NodeObject> OBJECT getNodeObject(Class<OBJECT> type,QueryResult result) throws Throwable
     {
-        return QueryResult.get(null,type,result);
+        return QueryResult.getNodeObject(null,type,result);
     }
 }
 
